# dreams

./: README.md  pyproject.toml
examples/: legit.eml  phishing.eml  spam.eml
qmail/: __init__.py  cli.py  detectors.py  observatory.py  parser.py  quantum.py  screen.py  signals.py  states.py
tests/: test_observatory.py  test_quantum.py  test_screen.py
